MODUSERSBL-230: upgrade module to vert.x 5.0