@@ -2,14 +2,13 @@ package org.folio.rest.util;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
-import org.apache.hc.core5.http.HttpStatus;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.folio.HttpStatus;
 import org.folio.rest.exception.TokenNotFoundException;
 import org.folio.rest.exception.UnprocessableEntityException;
 import org.folio.rest.jaxrs.model.Error;
@@ -35,8 +34,8 @@ public final class ExceptionHelper {
         .map(e -> new Error()
           .withCode(e.getCode())
           .withMessage(e.getMessage()))
-        .collect(Collectors.toList());
-      return Response.status(HttpStatus.SC_UNPROCESSABLE_ENTITY)
+        .toList();
+      return Response.status(HttpStatus.SC_UNPROCESSABLE_CONTENT)
         .type(MediaType.APPLICATION_JSON)
         .entity(new Errors().withErrors(errors).withTotalRecords(errors.size()))
         .build();
